# xbps-gtk

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  ar-lib  autogen.sh  compile  config.h  config.status  configure  configure.ac  configure~  depcomp  install-sh  missing
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.3
locale/: zh_CN.txt
locale/zh_CN/LC_MESSAGES/: xbps-gtk.mo
po/: xbps-gtk.pot
po/zh_CN/: zh_CN.po
src/: callbacks.c  main.c  package.c  repository.c  transaction.c  window.c  window.h
src/.deps/: xbps_gtk-callbacks.Po  xbps_gtk-main.Po  xbps_gtk-package.Po  xbps_gtk-repository.Po  xbps_gtk-transaction.Po  xbps_gtk-window.Po
